--- a/src/App.css
+++ b/src/App.css
@@ -509,6 +509,16 @@
   font-weight: 300;
 }
 
+.contact-link {
+  color: inherit;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.contact-link:hover {
+  color: var(--secondary-color);
+}
+
 .c-icon {
   color: white;
   opacity: 0.7;
